# neural-xray

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: research-results.md
examples/: diagnose_model.py  trace_gpt2.py
neural_xray/: __init__.py  blueprint.py  cartography.py  cli.py  cluster.py  diagnostics.py  evidence.py  extractor.py  loader.py  mapper.py  projector.py  sae.py  tracer.py  transplanter.py  visualizer.py
neural_xray/server/: __init__.py  licensing.py  requirements.txt  server.py  state.py
neural_xray/server/api/: __init__.py  abliteration.py  attention.py  cartography.py  chat.py  cluster.py  concepts.py  diagnostics.py  evidence.py  models.py  patching.py  sae.py  surgery.py  system.py  trace.py
neural_xray/server/static/: index.html
neural_xray/server/static/assets/: index-BzePh225.js  index-CUl6pSZE.js  index-CtzqJyRm.js  index-CyYF8_jq.js  index-DG6ey88a.js  index-DLIXjb81.css  index-Ol-uDyKn.css
